SC_BEGIN_PACKAGE(DOC)

OPTION(SC_DOC_GENERATE "Generate documentation" OFF)

IF (SC_DOC_GENERATE)
	SET(DOC_BUILD_DIR ${CMAKE_CURRENT_BINARY_DIR})

	IF(SC_ENABLE_CONTRIB)
		ADD_CUSTOM_TARGET(scdoc ALL
		                  COMMAND python ${CMAKE_CURRENT_SOURCE_DIR}/build-doc.py ${DOC_BUILD_DIR} --all
		                  WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
	ELSE()
		ADD_CUSTOM_TARGET(scdoc ALL
		                  COMMAND python ${CMAKE_CURRENT_SOURCE_DIR}/build-doc.py ${DOC_BUILD_DIR}
		                  WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
	ENDIF()

	INSTALL(DIRECTORY ${DOC_BUILD_DIR}/html DESTINATION ${SC3_PACKAGE_SHARE_DIR}/doc/seiscomp)
	INSTALL(DIRECTORY ${DOC_BUILD_DIR}/man1 DESTINATION ${SC3_PACKAGE_SHARE_DIR}/man)
ENDIF (SC_DOC_GENERATE)
