CONFIGURE_FILE(seiscomp-python.in ${CMAKE_CURRENT_BINARY_DIR}/seiscomp-python @ONLY)

SC_INSTALL_INIT(kernel kernel.py)

INSTALL(PROGRAMS seiscomp-control.py DESTINATION ${SC3_PACKAGE_BIN_DIR})

INSTALL(
	FILES
		seiscomp
		${CMAKE_CURRENT_BINARY_DIR}/seiscomp-python
	DESTINATION bin
	PERMISSIONS
		OWNER_EXECUTE OWNER_READ OWNER_WRITE
		GROUP_EXECUTE GROUP_READ
		WORLD_EXECUTE WORLD_READ
)

INSTALL(DIRECTORY share/deps DESTINATION ${SC3_PACKAGE_SHARE_DIR}
        PATTERN ".svn" EXCLUDE
        PATTERN "CMakeLists.txt" EXCLUDE)
INSTALL(DIRECTORY share/shell-completion DESTINATION ${SC3_PACKAGE_SHARE_DIR}
        PATTERN ".svn" EXCLUDE
        PATTERN "CMakeLists.txt" EXCLUDE)

FILE(GLOB descs "${CMAKE_CURRENT_SOURCE_DIR}/descriptions/*.xml")
INSTALL(FILES ${descs} DESTINATION ${SC3_PACKAGE_APP_DESC_DIR})

