SET(PYTHON_PACKAGE_PATH ${SC3_PACKAGE_PYTHON_LIB_DIR}/seiscomp)

IF( NOT _WIN32 AND NOT MACOSX )
	INSTALL(
		FILES __init__.py.unix
		RENAME __init__.py
		DESTINATION ${PYTHON_PACKAGE_PATH}
	)
ELSE( NOT _WIN32 AND NOT MACOSX )
	INSTALL(FILES __init__.py
		DESTINATION ${PYTHON_PACKAGE_PATH}
	)
ENDIF(NOT _WIN32 AND NOT MACOSX )

INSTALL(FILES
	# Python file to be installed
	kernel.py
	setup.py
	shell.py
	DESTINATION ${PYTHON_PACKAGE_PATH})
